Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-13569

[REG 3.2.2 -> 3.3.0] Crash when closing project

XMLWordPrintable

      1. Open a project.
        Let's call it project A.
      2. Open another project.
        Let's call it project B.
      3. Select "File" -> "Close Project" -> "Close Project 'B'" from the menu.
      4. Select "File" -> "Close Project" -> "Close Project 'A'" from the menu.
        Creator crashes.

      This became possible with the fix for QTCREATORBUG-13497.

      0	ProjectExplorer::ProjectExplorerPlugin::unloadProject	projectexplorer.cpp	1299	0x551a7ae3	
      1	ProjectExplorer::ProjectExplorerPlugin::unloadProject	projectexplorer.cpp	1280	0x551a77a6	
      2	ProjectExplorer::ProjectExplorerPlugin::qt_static_metacall	moc_projectexplorer.cpp	530	0x55387520	
      3	QMetaObject::activate	qobject.cpp	3716	0x56774920	
      4	QMetaObject::activate	qobject.cpp	3582	0x56774331	
      5	QAction::triggered	moc_qaction.cpp	360	0x5a57af3b	
      6	QAction::qt_static_metacall	moc_qaction.cpp	201	0x5a57a81f	
      7	QMetaObject::activate	qobject.cpp	3716	0x56774920	
      8	QMetaObject::activate	qobject.cpp	3582	0x56774331	
      9	QAction::triggered	moc_qaction.cpp	360	0x5a57af3b	
      10	QAction::activate	qaction.cpp	1168	0x5a57a617	
      11	QMenuPrivate::activateCausedStack	qmenu.cpp	1004	0x5a78eb80	
      12	QMenuPrivate::activateAction	qmenu.cpp	1082	0x5a78ee32	
      13	QMenu::mouseReleaseEvent	qmenu.cpp	2403	0x5a792171	
      14	QWidget::event	qwidget.cpp	8657	0x5a5e63a6	
      15	QMenu::event	qmenu.cpp	2516	0x5a79272a	
      16	QApplicationPrivate::notify_helper	qapplication.cpp	3722	0x5a59569e	
      17	QApplication::notify	qapplication.cpp	3280	0x5a5938a8	
      18	QCoreApplication::notifyInternal	qcoreapplication.cpp	932	0x56722b04	
      19	QCoreApplication::sendSpontaneousEvent	qcoreapplication.h	231	0x568415a8	
      ...	<More>				
      

        1. stacktrace.txt
          30 kB
          Robert Löhning
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            dt Daniel Teske
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes